# fugue-core

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  LICENSE  MAINTAINERS.md  README.md  rustfmt.toml
.github/workflows/: build-and-test.yml
fugue/: Cargo.toml
fugue-arch/: Cargo.toml
fugue-arch/src/: lib.rs
fugue-arch/src/defaults/: arm.rs  mips.rs  mod.rs  x86.rs
fugue-bv/: Cargo.toml
fugue-bv/src/: core.rs  core_bigint.rs  core_mixed.rs  core_u128.rs  core_u64.rs  error.rs  lib.rs  sized.rs
fugue-bv/src/core_bigint/: mask_table.rs  mod.rs
fugue-bytes/: Cargo.toml
fugue-bytes/src/: endian.rs  lib.rs  order.rs  primitives.rs  traits.rs
fugue-core/: Cargo.toml
fugue-core/examples/: disassemble.rs  execution.rs  high-disasm.rs
fugue-core/src/: ir.rs  language.rs  lib.rs  lifter.rs  prelude.rs
fugue-core/src/arch/: aarch64.rs  arm.rs  x86.rs
fugue-core/src/attributes/: common.rs  mod.rs
fugue-core/src/attributes/platform/: mod.rs
fugue-core/src/eval/: dummy.rs  fixed_state.rs  mod.rs
fugue-core/src/icfg/: mod.rs
fugue-core/src/loader/: mod.rs  object.rs
fugue-core/src/project/: mod.rs
fugue-core/src/util/: mod.rs  table.rs
fugue-core/src/util/patfind/: arm-le-32.yml  mod.rs
fugue-core/tests/: disassemble.rs
fugue-core/tests/bins/: blinky-o0.disasm  blinky-o0.elf
fugue-db/: Cargo.toml  build.rs
fugue-db/schema/: fugue_db.capnp
fugue-db/src/: architecture.rs  basic_block.rs  block.rs  database.rs  error.rs  export_info.rs  format.rs  fugue_db_capnp.rs  function.rs  id.rs  inter_ref.rs  intra_ref.rs  lib.rs  metadata.rs  project.rs  schema.rs  segment.rs  table.rs
fugue-db/src/backend/: mod.rs
fugue-db/src/types/: address.rs  key.rs  location.rs  mod.rs
fugue-emu/: Cargo.toml
fugue-emu/examples/: test_cpsie.rs  test_disasm.rs  test_evaluator.rs  test_float.rs
fugue-emu/examples/data/: hello_world.cfg.txt  hello_world.elf
fugue-emu/src/: emu.rs  lib.rs
fugue-emu/src/arch/: mod.rs
fugue-emu/src/arch/cortex_m/: mod.rs
fugue-emu/src/arch/cortex_m/scs/: mod.rs
fugue-emu/src/context/: concrete.rs  error.rs  manager.rs  memory_map.rs  mod.rs  traits.rs  types.rs
fugue-emu/src/context/concrete/: mod.rs  observer.rs  state.rs
fugue-emu/src/emu/: error.rs  mod.rs  traits.rs
fugue-emu/src/engine/: fetcher.rs  icache.rs  mod.rs  tblock.rs  tcache.rs  tgraph.rs
fugue-emu/src/eval/: concrete.rs  error.rs  mod.rs  traits.rs  types.rs
fugue-emu/src/eval/concrete/: mod.rs  observer.rs
fugue-emu/src/peripheral/: error.rs  mod.rs  traits.rs
fugue-emu/src/peripheral/generic/: dummy.rs  gpio.rs  mod.rs
fugue-emu/src/sim/: error.rs  mod.rs  traits.rs  types.rs
fugue-emu/src/sim/channel/: digital.rs  error.rs  event.rs  i2c.rs  logger.rs  mod.rs  serial.rs
fugue-fp/: Cargo.toml
fugue-fp/src/: lib.rs
fugue-high/: Cargo.toml
fugue-high/src/: ir.rs  language.rs  lib.rs  lifter.rs
fugue-high/src/arch/: aarch64.rs  arm.rs  mod.rs  x86.rs
fugue-high/src/eval/: dummy.rs  fixed_state.rs  mod.rs
fugue-high/src/icfg/: mod.rs
fugue-high/src/loader/: mod.rs  object.rs
fugue-high/src/util/: mod.rs  table.rs
fugue-ir/: .gitignore  Cargo.toml
fugue-ir/benches/: processor_spec.rs
fugue-ir/data/arm/: ARM.cspec  ARM4_le.sla  ARM5_le.sla  ARM5t_le.sla  ARM_v45.cspec  ARM_win.cspec
fugue-ir/data/mips/: mips64.cspec  mips64_32_n32.cspec  mips64_32_o32.cspec
fugue-ir/data/x86/: x86borland.cspec  x86delphi.cspec
fugue-ir/src/: address.rs  bits.rs  compiler.rs  convention.rs  endian.rs  error.rs  float_format.rs  language.rs  lib.rs  processor.rs  register.rs  space.rs  space_manager.rs  translator.rs
fugue-ir/src/deserialise/: error.rs  mod.rs  parse.rs
fugue-ir/src/disassembly/: construct.rs  context.rs  ecode.rs  error.rs  lift.rs  mod.rs  opcode.rs  partmap.rs  pattern.rs  pcode.rs  varnodedata.rs  walker.rs
fugue-ir/src/disassembly/lift/: ecode.rs  mod.rs  pcode.rs
fugue-ir/src/disassembly/symbol/: mod.rs  sub_table.rs  symbol.rs  symbol_scope.rs  symbol_table.rs
fugue-ir/src/il/: instruction.rs  mod.rs
fugue-ir/src/il/ecode/: mod.rs
fugue-ir/src/il/instruction/: mod.rs
fugue-ir/src/il/pcode/: mod.rs  operand.rs  register.rs
fugue-ir/src/il/traits/: mod.rs
fugue-ir/src/register/: x86_64.rs
fugue-lift/: Cargo.toml
fugue-lift/benches/: processor_spec.rs
fugue-lift/data/arm/: ARM4_be.sla  ARM5_be.sla  ARM5t_be.sla
fugue-lift/src/: language.rs  lib.rs  opcode.rs  pcode.rs  space_manager.rs  translator.rs  varnodedata.rs
fugue-lift/src/deserialise/: parse.rs
fugue-lift/src/disassembly/: construct.rs  context.rs  mod.rs  partmap.rs  pattern.rs  pcode.rs  subtable.rs  varnodedata.rs  walker.rs
fugue-lift/src/disassembly/symbol/: mod.rs  sub_table.rs  symbol.rs  symbol_scope.rs  symbol_table.rs
fugue-lifter/: Cargo.toml
fugue-lifter/src/: lib.rs
fugue-lifter/src/builder/: core.rs  error.rs  mod.rs  types.rs
fugue-lifter/src/runtime/: constructor.rs  context.rs  input.rs  input.rs.safe  mod.rs  partmap.rs  pcode.rs  varnode.rs
fugue-lifter/src/utils/: constructor.rs  context.rs  input.rs  mod.rs  partmap.rs  pcode.rs
fugue-pcode/: Cargo.toml
fugue-pcode/data/arm/: ARM4t_be.sla  ARM4t_le.sla
fugue-pcode/src/: address.rs  endian.rs  float_format.rs  language.rs  lib.rs  opcode.rs  processor.rs  space.rs  space_manager.rs  varnodedata.rs
fugue-pcode/src/deserialise/: error.rs  parse.rs
fugue-pcode/src/disassembly/: construct.rs  context.rs  error.rs  mod.rs  partmap.rs  pattern.rs  symbol_table.rs
fugue-state/: Cargo.toml
fugue-state-derive/: Cargo.toml
fugue-state-derive/src/: lib.rs
fugue-state/src/: chunked.rs  flat.rs  lib.rs  paged.rs  pcode.rs  register.rs  traits.rs  unique.rs
fugue/src/: lib.rs
