[package]
name = "fugue-arch"
version = "0.2.4"
authors = ["Sam Thomas <st@xv.ax>"]
edition = "2021"
license = "MIT"
description = "A binary analysis framework written in Rust"
homepage = "https://fugue.re"

[dependencies]
fugue-bytes = { path = "../fugue-bytes", version = "0.2" }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
unicase = "2.6"
