[package]
name = "fugue-bv"
version = "0.2.32"
authors = ["Sam Thomas <st@xv.ax>"]
edition = "2021"
license = "MIT"

[features]
default = ["bigint"]
fixed-u64 = []
fixed-u128 = []
bigint = ["rug"]

[dependencies]
fugue-bytes = { path = "../fugue-bytes", version = "0.2", registry = "fugue" }
num-integer = "0.1"
num-traits = "0.2"
paste = "1"
rug = { version = "1", features = ["integer", "serde"], optional = true }
serde = { version = "1", features = ["derive", "rc"] }
thiserror = "1"
