[package]
name = "fugue-bv"
version = "0.3.0"
authors = ["Sam Thomas <st@xv.ax>"]
edition = "2021"
license = "MIT"
description = "A binary analysis framework written in Rust"
homepage = "https://fugue.re"

[dependencies]
fugue-bytes = { path = "../fugue-bytes", version = "0.3" }
num-integer = "0.1"
num-traits = "0.2"
paste = "1"
rug = { version = "1", features = ["integer", "serde"] }
serde = { version = "1", features = ["derive"] }
static_init = "1"
thiserror = "1"
