[package]
name = "fugue-bytes"
version = "0.2.2"
authors = ["Sam Thomas <st@xv.ax>"]
edition = "2021"
license = "MIT"

[features]
default = []
extra-integer-types = ["ux"]

[dependencies]
byteorder = "1"
paste = "1"
serde = { version = "1", features = ["derive"] }
ux = { version = "0.1", optional = true }
