[package]
name = "fugue-bytes"
version = "0.3.0"
authors = ["Sam Thomas <st@xv.ax>"]
edition = "2021"
license = "MIT"
description = "A binary analysis framework written in Rust"
homepage = "https://fugue.re"

[dependencies]
byteorder = "1"
paste = "1"
serde = { version = "1", features = ["derive"] }
