[package]
name = "fugue-core"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1"
bitflags = "2"
fugue-arch = { version = "0.3", path = "../fugue-arch" }
fugue-bv = { version = "0.3", path = "../fugue-bv" }
fugue-bytes = { version = "0.3", path = "../fugue-bytes" }
fugue-ir = { version = "0.3", path = "../fugue-ir" }
gazebo = "0.8"
heed = { version = "0.20", features = ["read-txn-no-tls", "posix-sem"] }
iset = "0.2"
nom = "7"
memmap2 = "0.9"
object = "0.35"
ouroboros = "0.18"
regex = "1"
rkyv = "0.7"
rustc-hash = "1.1"
sealed = "0.5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
static_init = "1"
tempfile = "3"
thiserror = "1"
yaxpeax-arch = { version = "0.2", default-features = false }
yaxpeax-arm = "0.2"
yaxpeax-x86 = "1.2"
uuid = "1"

[dev-dependencies]
anyhow = "1"
env_logger = "0.10"
