[package]
name = "fugue-db"
version = "0.2.10"
authors = ["Sam Thomas <st@xv.ax>"]
edition = "2021"
build = "build.rs"
license = "MIT"

[features]
default = ["bigint"]
bigint = ["fugue-ir/bigint"]
fixed-u64 = ["fugue-ir/fixed-u64"]
fixed-u128 = ["fugue-ir/fixed-u128"]

[dependencies]
fugue-arch = { path = "../fugue-arch", version = "0.2", registry = "fugue" }
fugue-bytes = { path = "../fugue-bytes", version = "0.2", registry = "fugue" }
fugue-ir = { path = "../fugue-ir", version = "0.2", registry = "fugue", default-features = false }

educe = "0.4"
flatbuffers = "2.0"
fs_extra = "1.2"
intervals = { version = "0.1", registry = "fugue" }
ouroboros = "0.9"

serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "1"
unicase = "2.6"
which = "4"
url = "2.2"

[build-dependencies]
flatc-rust = "0.2"
flatc = "0.2.1"
