[package]
name = "fugue-emu"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fugue-core = { version = "0.3", path = "../fugue-core" }
fugue-arch = { version = "0.3", path = "../fugue-arch" }
fugue-bv = { version = "0.3", path = "../fugue-bv" }
fugue-bytes = { version = "0.3", path = "../fugue-bytes" }
fugue-ir = { version = "0.3", path = "../fugue-ir" }
# multi_key_map = { version = "0.3.0" }
anyhow = "1"
thiserror = "1"
nohash-hasher = "0.2.0"
petgraph = "0.6.5"
iset = "0.2"
ustr = { version = "1.0", features = ["serde"] }
parking_lot = "0.12"
# enum_dispatch = "0.3"
dyn-clone = "1"
ouroboros = "0.18"
ahash = { version = "0.8", features = ["serde"] }