[package]
name = "fugue-fp"
version = "0.2.2"
authors = ["Sam Thomas <st@xv.ax>"]
edition = "2021"
license = "MIT"

[dependencies]
fugue-bv = { path = "../fugue-bv", version = "0.2", features = ["bigint"], default-features = false }
fugue-ir = { path = "../fugue-ir", version = "0.2" }
rug = { version = "1", features = ["float"] }
thiserror = "1"
