[package]
name = "fugue-high"
version = "0.3.0"
edition = "2021"

[dependencies]
fugue-arch = { version = "0.3", path = "../fugue-arch" }
fugue-ir = { version = "0.3", path = "../fugue-ir" }
nom = "7"
ouroboros = "0.18"
regex = "1"
rustc-hash = "1.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
static_init = "1"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
env_logger = "0.10"
