[package]
name = "fugue-high"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1"
bitflags = "2"
fugue-arch = { version = "0.3", path = "../fugue-arch" }
fugue-bv = { version = "0.3", path = "../fugue-bv" }
fugue-bytes = { version = "0.3", path = "../fugue-bytes" }
fugue-ir = { version = "0.3", path = "../fugue-ir" }
nom = "7"
memmap2 = "0.9"
object = "0.35"
ouroboros = "0.18"
regex = "1"
rustc-hash = "1.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
static_init = "1"
thiserror = "1"
yaxpeax-arch = { version = "0.2", default-features = false }
yaxpeax-arm = "0.2"

[dev-dependencies]
anyhow = "1"
env_logger = "0.10"
