[package]
name = "fugue-lifter"
version = "0.3.0"
edition = "2021"

[features]
build = [
  "anyhow",
  "fugue-ir",
  "itertools",
  "prettyplease",
  "proc-macro2",
  "quote",
  "syn",
  "thiserror",
]
default = ["build"]

[dependencies]
anyhow = { version = "1", optional = true }
arrayvec = "0.7"
fugue-ir = { path = "../fugue-ir", optional = true }
itertools = { version = "0.13", optional = true }
prettyplease = { version = "0.2", optional = true }
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }
syn = { version = "2", features = ["parsing"], optional = true }
thiserror = { version = "1", optional = true }
