[package]
name = "fugue-state"
version = "0.3.0"
authors = ["Sam Thomas <st@xv.ax>"]
edition = "2021"
license = "MIT"
description = "A binary analysis framework written in Rust"
homepage = "https://fugue.re"

[dependencies]
fugue-bv = { path = "../fugue-bv", version = "0.3" }
fugue-bytes = { path = "../fugue-bytes", version = "0.3" }
fugue-ir = { path = "../fugue-ir", version = "0.3" }
fugue-state-derive = { path = "../fugue-state-derive", version = "0.3" }
iset = "0.2"
log = "0.4"
paste = "1"
thiserror = "1"
ustr = "1"
