[package]
name = "fugue"
version = "0.3.0"
authors = ["Sam Thomas <st@xv.ax>", "Zitai Chen <zitaichen@outlook.com>"]
edition = "2021"
license = "MIT"
description = "A binary analysis framework written in Rust"
homepage = "https://fugue.re"

[features]
fp = ["fugue-fp"]
state = ["fugue-state"]

[dependencies]
fugue-arch = { path = "../fugue-arch", version = "0.3" }
fugue-bv = { path = "../fugue-bv", version = "0.3" }
fugue-bytes = { path = "../fugue-bytes", version = "0.3" }
fugue-core = { path = "../fugue-core", version = "0.3" }
fugue-fp = { path = "../fugue-fp", version = "0.3", optional = true }
fugue-ir = { path = "../fugue-ir", version = "0.3" }
fugue-state = { path = "../fugue-state", version = "0.3", optional = true }
